fix MatchServiceImplTest for new filter method findMatchByUserIdAndGameId
issue #27